# GameEngine

./: .clang-format  CMakeLists.txt  Game.md  ReadMe.md  Scene.cpp  Scene.hpp  ScriptManager.cpp  ScriptManager.hpp  Sound.cpp  Sound.hpp  install.sh  test.cpp
.github/workflows/: blank.yml  linter.yml  linuxBuild.yml  release.yml  windowBuild.yml
GameEngine/: CMakeLists.txt  GameEngine.md  ProjectInfo.cpp  ProjectInfo.hpp  Uniti.cpp  Uniti.hpp
GameEngine/AssetManager/: AssetManager.cpp  AssetManager.hpp  AssetManager.md  CMakeLists.txt
GameEngine/Event/: CMakeLists.txt  Event.cpp  Event.hpp  Event.md
GameEngine/Network/: CMakeLists.txt  Network.cpp  Network.hpp  Network.md  Server.cpp  Server.hpp
GameEngine/Object/: CMakeLists.txt  Object.cpp  Object.hpp  Object.md  ObjectManager.cpp  ObjectManager.hpp
GameEngine/Object/Collision/: CMakeLists.txt  Collision.cpp  Collision.hpp  Collision.md  CollisionManager.cpp  CollisionManager.hpp
GameEngine/Object/Movement/: CMakeLists.txt  Movement.cpp  Movement.hpp  Movement.md
GameEngine/Object/Transform/: CMakeLists.txt  Transform.cpp  Transform.hpp  Transform.md
GameEngine/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  Scene.md  SceneManager.cpp  SceneManager.hpp  ScenePath.cpp  ScenePath.hpp
GameEngine/Script/: AScript.cpp  AScript.hpp  CMakeLists.txt  IScript.hpp  Script.md  ScriptFactory.cpp  ScriptFactory.hpp  ScriptManager.cpp  ScriptManager.hpp
GameEngine/Utils/: CMakeLists.txt  Collisions.cpp  Collisions.hpp  Object.cpp  Object.hpp  Objects.cpp  Objects.hpp  Script.cpp  Script.hpp
Json/: projectInfos.json
Json/Scenes/: global.json  test.json
RenderEngine/: CMakeLists.txt  Window.hpp
RenderEngine/Assets/: Texture.hpp
RenderEngine/Event/: Mouse.hpp
RenderEngine/Printable/: CMakeLists.txt  IPrintable.hpp  Sprite.cpp  Sprite.hpp  Text.cpp
RenderEngine/Time/: Clock.hpp
RenderEngine/Vector/: Vector3f.cpp
RenderEngineBase/: Window.cpp  Window.hpp
RenderEngineBase/Assets/: CMakeLists.txt  Font.cpp  Font.hpp  Texture.cpp
RenderEngineBase/Box/: Box.cpp  Box.hpp
RenderEngineBase/Color/: Color.cpp  Color.hpp
RenderEngineBase/Event/: Input.cpp  Input.hpp  Mouse.cpp  Mouse.hpp
RenderEngineBase/Printable/: IPrintable.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
RenderEngineBase/Sound/: CMakeLists.txt  Sound.cpp  Sound.hpp
RenderEngineBase/Time/: Clock.cpp  Clock.hpp
RenderEngineBase/Utils/: CMakeLists.txt  Vector.cpp
RenderEngineBase/Vector/: CMakeLists.txt  Vector2f.cpp  Vector2f.hpp  Vector2i.cpp  Vector2i.hpp  Vector3f.cpp  Vector3f.hpp
RenderEngineSFML/: Render.md  Window.cpp  Window.hpp
RenderEngineSFML/Assets/: Assets.md  Font.cpp  Font.hpp  Texture.cpp  Texture.hpp
RenderEngineSFML/Box/: Box.cpp  Box.hpp  Box.md  CMakeLists.txt
RenderEngineSFML/Color/: CMakeLists.txt  Color.cpp  Color.hpp  Color.md
RenderEngineSFML/Event/: CMakeLists.txt  Event.md  Input.cpp  Input.hpp  Mouse.cpp  Mouse.hpp
RenderEngineSFML/Printable/: CMakeLists.txt  IPrintable.hpp  Printable.md  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
RenderEngineSFML/Sound/: Sound.cpp  Sound.hpp  Sound.md
RenderEngineSFML/Time/: Clock.cpp  Clock.hpp  Time.md
RenderEngineSFML/Utils/: Utils.md  Vector.cpp  Vector.hpp
RenderEngineSFML/Vector/: Vector2f.cpp  Vector2f.hpp  Vector2i.cpp  Vector2i.hpp  Vector3f.cpp  Vector3f.hpp
Scripts/: Animation.cpp  Animation.hpp  ButtonNavigation.cpp  ButtonNavigation.hpp  CMakeLists.txt  DisplayHP.cpp  DisplayHP.hpp  Explosion.cpp  Explosion.hpp  InputField.cpp  InputField.hpp  LiveScript.cpp  LiveScript.hpp  Missile.cpp  Missile.hpp  MissileHandler.cpp  MissileHandler.hpp  MouseMovement.cpp  MouseMovement.hpp  NetworkBase.cpp  NetworkBase.hpp  NetworkTest.cpp  NetworkTest.hpp  Parallax.cpp  Parallax.hpp  Scripts.md  Timer.cpp  Timer.hpp
json/: project.json
json/scenes/: MainMenu.json  controls.json  gameover.json  global.json  input.json  parallax.json  (+2 more)
scripts/: ForwardParallax.cpp  ForwardParallax.hpp  VasselMovement.cpp  VasselMovement.hpp
src/: CMakeLists.txt  ProjectInfo.cpp  ProjectInfo.hpp  UnitiGame.cpp  UnitiGame.hpp  index.cpp
(+28 files in other folders)
